# dashboard

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: manage.py  populate_collapses.py  populate_images.py  update_image_file_sizes.py  update_image_paths.py  upload_dic.py  upload_dic_from_txt.py
app/ppcx_app/: admin.py  models.py  tests.py  urls.py  views.py
app/ppcx_app/functions/: fetch_data.py  h5dic.py  visualization.py
app/ppcx_app/migrations/: 0013_add_image_rotation.py  0015_reset_centroid_field.py  0016_sync_collapse_with_db.py  0017_alter_collapse_options_collapse_date_dic_created_at_and_more.py  0018_collapse_date_manual.py  0019_collapse_notes.py  0020_collapse_type.py  0021_alter_collapse_type.py  0022_camera_gsd_alter_camera_easting_and_more.py  0023_dic_with_inversion.py  0024_remove_dic_different_timestamps_and_more.py  0025_rename_acquisition_timestamp_to_datetime.py  0026_alter_image_datetime.py  0027_remove_image_unique_camera_timestamp_and_more.py  0028_altered_master_timestamp_and_more.py  0029_remove_dic_dic_master_ts_idx_and_more.py  0030_image_file_size_bytes.py
