[project]
name = "ppcx-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2.0",
    "django-extensions>=3.2.0",
    "django-leaflet>=0.28.0",
    "djangorestframework>=3.14.0",
    "dotenv>=0.9.9",
    "exifread>=3.3.1",
    "gunicorn>=23.0.0",
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.0",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8.0",
    "requests>=2.32.4",
    "tqdm>=4.66.1",
    "shapely>=2.1.0",
    "scipy>=1.15.3",
    "plotly>=6.5.0",
]
